@@ -512,8 +512,10 @@ int main()
             index < sizeof(utoa10_cases) / sizeof(utoa10_cases[0]);
             ++index
         ) {
-            kernaux_utoa10(utoa10_cases[index].value, buffer);
+            const char *const end1 =
+                kernaux_utoa10(utoa10_cases[index].value, buffer);
             assert(strcmp(buffer, utoa10_cases[index].result) == 0);
+            assert(end1 == str_end(buffer));
         }
     }
 
@@ -527,14 +529,16 @@ int main()
         ) {
             const int64_t value = itoa10_cases[index].value;
 
-            kernaux_itoa10(value, buffer);
+            const char *const end1 = kernaux_itoa10(value, buffer);
             assert(strcmp(buffer, itoa10_cases[index].result) == 0);
+            assert(end1 == str_end(buffer));
 
             if (value <= 0) continue;
 
-            kernaux_itoa10(-value, buffer);
+            const char *const end2 = kernaux_itoa10(-value, buffer);
             assert(buffer[0] == '-');
             assert(strcmp(&buffer[1], itoa10_cases[index].result) == 0);
+            assert(end2 == str_end(buffer));
         }
     }
 
@@ -546,8 +550,10 @@ int main()
             index < sizeof(utoa16_cases) / sizeof(utoa16_cases[0]);
             ++index
         ) {
-            kernaux_utoa16(utoa16_cases[index].value, buffer);
+            const char *const end1 =
+                kernaux_utoa16(utoa16_cases[index].value, buffer);
             assert(strcmp(buffer, utoa16_cases[index].result) == 0);
+            assert(end1 == str_end(buffer));
         }
     }
 
@@ -561,14 +567,16 @@ int main()
         ) {
             const int64_t value = itoa16_cases[index].value;
 
-            kernaux_itoa16(value, buffer);
+            const char *const end1 = kernaux_itoa16(value, buffer);
             assert(strcmp(buffer, itoa16_cases[index].result) == 0);
+            assert(end1 == str_end(buffer));
 
             if (value <= 0) continue;
 
-            kernaux_itoa16(-value, buffer);
+            const char *const end2 = kernaux_itoa16(-value, buffer);
             assert(buffer[0] == '-');
             assert(strcmp(&buffer[1], itoa16_cases[index].result) == 0);
+            assert(end2 == str_end(buffer));
         }
     }
 
